--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>QuickWeb</title>
+<title>TaskManager</title>
 <meta charset="utf-8">
 <link rel="stylesheet" href="index.css" media="screen" />
 <base target="main-iframe">
 </head>
 <body>
   <header class="top-bar">
-    <img src="logo.jpg" class="logo">
+    <img src="logo.png" class="logo">
     <div class="top-nav">
       <nav>
         <a href="/app/taskm/">进程</a>
