--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
         <a href="/app/appm/">应用</a>
         <a href="/app/plusm/">插件</a>
         <a href="/app/filem/">文件</a>
-        <a href="/app/sysinfo">系统信息</a>
-        <a href="/app/help">帮助</a>
+        <a href="/app/sysinfo/">系统信息</a>
+        <a href="/app/help/">帮助</a>
       </nav>
     </div>
   </header>
