--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,20 @@
   <div>
     <iframe src="welcome.html" name="main-iframe" id="main-iframe"></iframe>
   </div>
+  <div id="online-logs" class="online-logs">
+    <div style="padding:4px 8px;">
+      <div style="float:right">
+        <button onclick="$('#online-logs').css('height', '')">展开</button>
+        <button onclick="$('#online-logs').css('height', 30)">收起</button>
+        <button onclick="$('.log-lines pre').remove()">清空</button>
+      </div>
+      在线日志
+      <div style="clear:both"></div>
+    </div>
+    <div class="log-lines"></div>
+  </div>
 </body>
 </html>
+<script src="/socket.io/socket.io.js"></script>
 <script src="jquery.js"></script>
 <script src="index.js"></script>
