完成简单文件管理器

--- a/lib/app/filem/public/index.html
+++ b/lib/app/filem/public/index.html
@@ -10,12 +10,9 @@
   <div id="top" class="top-side">
     <table width="100%">
       <tr>
-        <td width="340">
+        <td width="130">
           <a href="#/" class="btn">首页</a>
-          <a href="#/create/file" class="btn">新建文件</a>
-          <a href="#/create/dir" class="btn">新建文件夹</a>
-          <a href="#/back" class="btn">后退</a>
-          <a href="#/forward" class="btn">前进</a>
+          <a href="#/up" class="btn">上级</a>
           <a href="#/refresh" class="btn">刷新</a>
         </td>
         <td width="40">路径:</td>
