登录安全功能

--- a/lib/app/sysinfo/public/index.html
+++ b/lib/app/sysinfo/public/index.html
@@ -10,7 +10,10 @@
   <div id="left" class="left-side">
     <a href="#/">刷新</a>
   </div>
-  <div id="main" class="main"></div>
+  <div id="main" class="main">
+    <div id="info"></div>
+    <div id="logs"></div>
+  </div>
 </body>
 </html>
 <script src="/jquery.js"></script>
