当点击了指定进程的“详细信息”按钮时才在线输出该进程的控制台输出信息

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       <div style="float:right">
         <button onclick="$('#online-logs').css('height', '')">展开</button>
         <button onclick="$('#online-logs').css('height', 30)">收起</button>
+        <button onclick="logsSwitchToTask('0')">屏蔽应用输出</button>
         <button onclick="$('.log-lines pre').remove()">清空</button>
       </div>
       控制台输出
