应用配置编辑界面

--- a/lib/app/appm/public/index.html
+++ b/lib/app/appm/public/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div id="left" class="left-side">
-    <a href="#/">概览</a>
+    <a href="#/">概览</a><br>
+    <a href="#/app/add">添加应用</a>
   </div>
   <div id="main" class="main"></div>
 </body>
