应用编辑界面：删除

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="home-page">
   <header class="top-bar">
-    <a href="welcome.html"><img src="logo.png" class="logo"></a>
+    <a href="/app/appm/"><img src="logo.png" class="logo"></a>
     <div class="top-nav">
       <nav>
         <a href="/app/taskm/">进程</a>
@@ -21,7 +21,7 @@
     </div>
   </header>
   <div>
-    <iframe src="welcome.html" name="main-iframe" id="main-iframe"></iframe>
+    <iframe src="/app/appm/" name="main-iframe" id="main-iframe"></iframe>
   </div>
   <div id="online-logs" class="online-logs">
     <div style="padding:4px 8px;">
