打开首页默认转到“进程”页面

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     </div>
   </header>
   <div>
-    <iframe src="/app/appm/" name="main-iframe" id="main-iframe"></iframe>
+    <iframe src="/app/taskm/" name="main-iframe" id="main-iframe"></iframe>
   </div>
   <div id="online-logs" class="online-logs">
     <div style="padding:4px 8px;">
