文件管理器地址栏可以直接按回车调整

--- a/lib/app/filem/public/index.html
+++ b/lib/app/filem/public/index.html
@@ -20,7 +20,7 @@
           <input id="filepath" type="text">
         </td>
         <td width="60">
-          <button onclick="location = '#/?path=' + $('input#filepath').val().trim();">转到</button>
+          <button onclick="gotoPath()">转到</button>
         </td>
       </tr>
     </table>
